--- a/12_form/views/index.ejs
+++ b/12_form/views/index.ejs
@@ -11,15 +11,18 @@
     <p><%= desc %></p>
     <h2>GET 요청</h2>
     <form action="/getForm" name="login1" method="get">
-        <input type="text" name="id" placeholder="ID">
-        <input type="password" name="pw" placeholder="PW">
+        <input type="text" name="id" placeholder="ID" required minlength="3" maxlength="6"><br>
+        <input type="password" name="pw" placeholder="PW" required minlength="4"><br>
+        <input type="email" placeholder="EMAIL" required><br>
+        <input type="number" placeholder="GRADE" required min="3" max="7"><br>
         <button type="submit">제출</button>
     </form>
 
     <h2>POST 요청</h2>
     <form action="/postForm" name="login2" method="post">
-        <input type="text" name="id" placeholder="ID">
-        <input type="password" name="pw" placeholder="PW">
+        <!-- 대소문자, 한글, 숫자, 4자 이상 -->
+        <input type="text" name="id" placeholder="ID" pattern="^([a-zA-Z0-9가-힣]){4,}$" title="대소문자, 한글, 숫자 4자 이상" required>
+        <input type="password" name="pw" placeholder="PW" pattern="^([a-z0-9]){8,12}$" title="소문자, 숫자로 8자리 이상 12자리 이하" required>
         <button type="submit">제출</button>
     </form>
 
