--- a/12_form_dynamic/views/exercise29.ejs
+++ b/12_form_dynamic/views/exercise29.ejs
@@ -88,11 +88,12 @@
             pw:form.pw.value,
         };
         // AXIOS 비동기 통신 - GET 요청
-        axios({
+        if(form.id.checkValidity()&&form.pw.checkValidity()){
+            axios({
             method:'POST',
             url:'/axios30',
             data:data,
-        }).then(function(response){
+            }).then(function(response){
             if(response.data.res=='success'){
                 document.querySelector('.result30').textContent=`${response.data.id}님! 로그인 성공😁`;
                 document.querySelector('.result30').style.color='blue';
@@ -104,6 +105,10 @@
                 document.querySelector('.result30').style.color='red';
             }
         })
+        }else{
+            document.querySelector('.result30').textContent=`제대로 입력하세요`;
+            document.querySelector('.result30').style.color='black';
+        }
     }
 </script>
 </html>
