--- a/13_file_upload/views/exercise31.ejs
+++ b/13_file_upload/views/exercise31.ejs
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>11/2 실습 31</title>
 </head>
+<style>
+    ul {
+        list-style: none;
+        padding-left: 0;
+    }
+</style>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <body>
     <h1><%= title %></h1>
@@ -20,15 +26,16 @@
     </form>
     <br>
     <h1>동적 파일 업로드</h1>
-    <form name="upload">
+    <form name="register">
         <input type="text" name="id" placeholder="아이디"><br>
         <input type="password" name="pw" placeholder="비밀번호"><br>
         <input type="text" name="name" placeholder="이름"><br>
         <input type="number" name="age" placeholder="나이"><br>
         <input type="file" name="dynamicFileName" id="dynamicFile"><br>
-        <button type="button" onclick="fileUpload()">업로드</button><br>
+        <button type="button" onclick="axiosPost(); fileUpload()">회원가입</button><br>
     </form>
     <img src="" width="200">
+    <h3></h3>
     <ul></ul>
 
 
@@ -54,14 +61,36 @@
                 // console.log(response.data);
                 // console.log(response.data.path);
                 document.querySelector('img').src=response.data.path;
-
-                // let ul = document.querySelector('ul');
-
-                // let li = document.createElement('li');
-                // li.innerText = '오렌지'; 
-                // ul.append(li);
             })
         }
+
+        function axiosPost(){
+        const form=document.forms['register'];
+        const data={
+            name:form.name.value,
+            age:form.age.value,
+            pw:form.pw.value,
+            id:form.id.value,
+        };
+        axios({
+            method:'POST',
+            url:'/axios',
+            data:data,
+        }).then(function(response){
+            let ul = document.querySelector('ul');
+            let h3 = document.querySelector('h3');
+            h3.innerText = response.data.id+"님 환영합니다!"
+            let pw = document.createElement('li');
+            pw.innerText = '비밀번호 : '+response.data.pw; 
+            ul.append(pw);
+            let name = document.createElement('li');
+            name.innerText = '이름 : '+response.data.name; 
+            ul.append(name);
+            let age = document.createElement('li');
+            age.innerText = '나이 : '+response.data.age; 
+            ul.append(age);
+        })
+    }
     </script>
 </body>
 </html>
