--- a/15_mvc_mysql/views/index.ejs
+++ b/15_mvc_mysql/views/index.ejs
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>index</title>
 </head>
 <body>
-    <h1>여기는 홈</h1>
-
-    <a href="/comments">댓글 목록 보기</a>
-    <a href="/user">회원 정보 보기</a>
+    <h1>MVC패턴과 MYSQL 연결</h1>
+    <a href="/visitor">방명록 남기기</a>
 </body>
 </html>
