--- a/16_sequelize/views/index.ejs
+++ b/16_sequelize/views/index.ejs
@@ -9,5 +9,9 @@
 <body>
     <h1>MVC패턴과 MYSQL 연결</h1>
     <a href="/visitor">방명록 남기기</a>
+
+    <h1>실습39. Sequelize 연습</h1>
+    <a href="/user/signup">회원가입</a>
+    <a href="/user/signin">로그인</a>
 </body>
 </html>
