--- a/18_socket/views/chat.ejs
+++ b/18_socket/views/chat.ejs
@@ -37,7 +37,7 @@
         </div> -->
     </div>
     <div class="input-container d-none">
-        <select name="to" id="to"></select>에게
+        <select id = "nick-list"></select>에게
         <input type="text" id="message" onkeyup="enterkey_send()">
         <button type="button" onclick="send()">전송</button>
     </div>
