--- a/18_socket/views/chat.ejs
+++ b/18_socket/views/chat.ejs
@@ -25,6 +25,7 @@
     <div class="nickname-container">
         <input type="text" id="nickname" placeholder="닉네임으로 입장하세요." autofocus onkeyup="enterkey_entry()">
         <button type="button" onclick="entry()">입장</button>
+        <div id="online"></div>
     </div>
     <div class="wrap d-none">
         <!-- [실습43] 임시 데이터 -->
@@ -42,7 +43,6 @@
         <button type="button" onclick="send()">전송</button>
     </div>
     <br><br><br>
-
     <script src="/static/js/chat.js"></script>
 </body>
 
